--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_spinkit: "^4.1.2"
   simple_animations: ^1.1.3
+  page_transition: ^1.1.4
 
 dev_dependencies:
   flutter_test:
